2011-11-21  Peter Breitenlohner   <peb@mppmu.mpg.de>

	Add upTeX support from Tanaka Takuji <KXD02663@nifty.ne.jp>.
	* ac/withenable.ac, Makefile.am: Require ptexenc.
	* version.ac (new): Define dvi2tty_version.
	* configure.ac: Adapted.

2011-01-26  Peter Breitenlohner   <peb@mppmu.mpg.de>

	* dvi2tty.test: Unset DVI2TTY to nullify dvi2tty options.
	Additional testcase with '-c'.
	* testc.tty: Expected output.

2010-11-13  Peter Breitenlohner   <peb@mppmu.mpg.de>

	Import dvi2tty-5.3.4.
	* configure.ac: Adapted.

2010-11-09  Peter Breitenlohner   <peb@mppmu.mpg.de>

	* dvi2tty.test: Test input filename without ".dvi".

2010-11-06  Peter Breitenlohner   <peb@mppmu.mpg.de>

	* dvi2tty.test: New shell script for 'make check' test.
	* ligtest.tty, test{,s,u}.tty (new): Expected test output.
	* Makefile.am: Add the new test.

2010-11-06  Peter Breitenlohner   <peb@mppmu.mpg.de>

	Import dvi2tty-5.3.3.
	* configure.ac: Adapted.

2010-10-23  Peter Breitenlohner   <peb@mppmu.mpg.de>

	Import dvi2tty-5.3.1.

	* Makefile.am, configure.ac: Proxy build system for TeX Live,
	using the dvi2tty-5.3.1 distribution tree.
	* dvi2tty-5.3.1-PATCHES: New directory with patches applied to
	the dvi2tty-5.3.1 distribution.

2010-10-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Add two disdvi command line options to handle .dvi files as
	created by pTeX and .xdv files as created by XeTeX.

	* commands.h: Define DVI opcodes for pTeX and XeTeX extensions.
	* disdvi.c: Add command line options `-p' or `--ptex' and `-x'
	or `--xetex'; handle DVI opcodes for pTeX and XeTeX extensions.

2010-10-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* commands.h: Correct typo (description of FONT_63).
	* disdvi.c: Print invalid DVI command bytes.

2010-02-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi2tty.c (readable_file) [WIN32]: Remove unused variable err.
	* dvi2tty.h: Remove pre-ANSI C prototypes.

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
