@@ -1,6 +1,6 @@
 ## Makefile.am for the TeX Live subdirectory texk/dvi2tty/
 ##
-## Copyright (C) 2009-2011 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009-2012 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../m4
@@ -51,12 +51,15 @@ man1_MANS = \
 
 ## Tests.
 ##
-TESTS = dvi2tty.test
+TESTS = disdvi.test dvi2tty.test
 
 TESTS_ENVIRONMENT = DVI2TTY_TREE=$(DVI2TTY_TREE)
 EXTRA_DIST += $(TESTS)
 
+## disdvi.test
+EXTRA_DIST += ligtest.dis
+DISTCLEANFILES = ligtest.dout
 ## dvi2tty.test
 EXTRA_DIST += ligtest.tty test.tty testc.tty tests.tty testu.tty
-DISTCLEANFILES = ligtest.out test.out testc.out tests.out testu.out
+DISTCLEANFILES += ligtest.out test.out testc.out tests.out testu.out
 
